--- a/mgdspy_hb/mgdspy_lib.csproj
+++ b/mgdspy_hb/mgdspy_lib.csproj
@@ -1,4 +1,4 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="15.0">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <ProductVersion>9.0.30729</ProductVersion>
@@ -26,7 +26,8 @@
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
-    <OldToolsVersion>2.0</OldToolsVersion>
+    <OldToolsVersion>3.5</OldToolsVersion>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\Debug\</OutputPath>
@@ -75,6 +76,10 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="mgdspy_hk, Version=1.0.4753.18086, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Release\mgdspy_hk.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib">
       <Name>mscorlib</Name>
     </Reference>
@@ -89,10 +94,6 @@
       <Name>System.Windows.Forms</Name>
     </Reference>
     <Reference Include="System.XML" />
-    <ProjectReference Include="..\mgdspy_hk2\mgdspy_hk2.vcproj">
-      <Project>{8847C0BE-1264-49B8-8092-8D028352EAF4}</Project>
-      <Name>mgdspy_hk</Name>
-    </ProjectReference>
     <ProjectReference Include="..\mwg.Win32\mwg.Win32.csproj">
       <Name>mwg.Win32</Name>
       <Project>{696E722B-8D4B-4569-AC92-A8076694D6BE}</Project>
